<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/title_date_picker"
        style="@style/SettingDialogItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/setting_dialog_title_date_picker" />

    <TextView
        android:id="@+id/date_picker_text"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_date_picker" />

    <TextView
        android:id="@+id/title_sort"
        style="@style/SettingDialogItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_picker_text"
        android:text="@string/setting_dialog_title_sort" />

    <Spinner
        android:id="@+id/button_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_sort" />

    <TextView
        android:id="@+id/title_desk"
        style="@style/SettingDialogItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_sort"
        android:text="@string/setting_dialog_title_desk" />

    <CheckBox
        android:id="@+id/choice_arts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_desk"
        android:text="@string/setting_dialog_checkbox_arts" />

    <CheckBox
        android:id="@+id/choice_fashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choice_arts"
        android:text="@string/setting_dialog_checkbox_fashion" />

    <CheckBox
        android:id="@+id/choice_sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choice_fashion"
        android:text="@string/setting_dialog_checkbox_sports" />

</RelativeLayout>